<resources>
    <string name="app_name">Semina</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="create">Create new account </string>
    <string name="hint_user">User </string>
    <string name="hint_password">Password </string>
    <string name="hint_gmail">Gmail </string>

    <string name="loginaccount">Đăng Nhập Tài Khoản </string>
    <string name="registeraccount"> Đăng Kí Tài Khoản</string>
    <string name="review">Review</string>
    <string name="rate">Rate start </string>
    <string name="hint_no_login"> chưa đăng nhập </string>
    <string name="post">post </string>
    <string name="title_activity_detailhotel">DetailhotelActivity</string>
    <string name="introdution">Giới Thiệu</string>
    <string name="todo">TODO</string>
    <string name="hotel">HOTEL</string>
    <string name="food">FOOD</string>
    <string name="place">PLACE</string>
    <string name="profile">Profile</string>
    <string name="festival">Lễ Hội Hàng Năm </string>
    <string name="review_m_i_nh_t">Trải Nghiệm Của Bạn</string>
    <string name="information_account">Information account</string>
    <string name="Register">Register</string>
    <string name="address">address</string>
    <string name="phone">phone</string>
    <string name="date">date</string>
    <string name="name_title">Name_title</string>
    <string name="Login">Login</string>
    <string name="write_review">write review</string>
    <string name="nameuser">name user</string>
    <string name="Map">Bản đồ</string>
    <string name="logout">Đăng Xuất</string>
    <string name="name_avatar">Tên đăng nhập </string>
    <string name="change_image">Đổi hình đại diện</string>
    <string name="change_phone">Change Phone</string>
    <string name="change_infor">Change Information user</string>
    <string name="comlete">Comlete</string>
    <string name="log_out">Đăng Xuất</string>
    <string name="Trang_chu">Trang chủ</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset">Reset</string>
    <string name="Write_review">Chia sẻ của bạn </string>
    <string name="xemthem">xem tất cả</string>
    <string name="driver">Phương Tiện Di Chuyển</string>


</resources>
