<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
  >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/MenuStyle">
        <ImageButton
            android:id="@+id/btn_map"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_checkin"
            android:contentDescription="@string/todo"
            />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/buton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"

     >

        <Button
            android:id="@+id/btn_hotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:textColor="@color/toolbar"
            android:text="@string/hotel"


            />
        <Button
            android:id="@+id/btn_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:layout_toEndOf="@+id/btn_hotel"
            android:textColor="@color/toolbar"
            android:background="#fff"/>
        <Button
            android:id="@+id/btn_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:layout_toEndOf="@+id/btn_food"
            android:textColor="@color/toolbar"
            android:background="#fff"
            />

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btn_place"
            android:text="@string/profile"
            android:textColor="@color/toolbar"
            android:background="#fff"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">
    <TextView
        android:id="@+id/festival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/festival"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"/>
    <TextView
        android:id="@+id/xemthem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xemthem"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/festival"
        android:layout_marginStart="110dp"
        android:textStyle="bold"
        android:textSize="12sp"/>
        <android.support.v7.widget.RecyclerView
            android:layout_below="@+id/festival"
            android:id="@+id/rv_event"
            android:layout_width="match_parent"
            android:layout_height="300dp">

        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"

     >
    <TextView
        android:id="@+id/driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_toEndOf="@id/driver"
            android:text="@string/xemthem"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_driver"
        android:layout_below="@+id/driver"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

</LinearLayout>



