<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Post_reviewActivity"
    android:orientation="vertical"
    android:background="@drawable/nen">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <TextView
        android:id="@+id/text_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/review"
        android:textSize="30sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_review"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
      />
    <Button
        android:id="@+id/btn_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@color/button"
        android:text="@string/post"/>

</LinearLayout>