<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardBackgroundColor="#F7F8FA"
    app:cardElevation="5dp"
    android:padding="5dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    android:outlineSpotShadowColor="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#090808"
            android:textSize="18sp"
            android:text="@string/name_title"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/address"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/phone"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />
    </LinearLayout>
</android.support.v7.widget.CardView>