<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:background="@drawable/nen">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:padding="10dp"
    >

    <TextView
        android:id="@+id/welcome_profile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/information_account"
       android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/red"
        android:textStyle="bold"


          />
    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginaccount"
        android:layout_below="@id/welcome_profile"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/toolbar"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        />



    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registeraccount"
        android:layout_below="@id/text_login"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/toolbar"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"

        />









</RelativeLayout>
</LinearLayout>



